--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/weo-edu/mailchimp",
   "dependencies": {
-    "superagent": "^1.3.0"
+    "superagent": "^1.3.0",
+    "superagent-as-promised": "^3.1.1",
+    "url-join": "0.0.1"
   }
 }
